@@ -1,6 +1,13 @@
 Changelog
 =========
 
+TBD
+-------------
+
+(released on TBD)
+
+* Adapter to output in SQL format
+
 Version 1.0.1
 -------------
 
